--- a/src/scss/utilities/_outline.scss
+++ b/src/scss/utilities/_outline.scss
@@ -4,6 +4,6 @@
 }
 
 :focus-visible {
-  outline: 1px dotted var(--clr-primary-100);
+  outline: 3px solid var(--clr-primary-100);
   outline-offset: 0.25rem;
 }
